force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <label>Budget - DEPRECATED</label>
    <nameField>
        <displayFormat>BN-{000000}</displayFormat>
        <label>Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>