force-app/main/default/objects/Budget__c/fields/Remaining_Unallocated_Funds__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Unallocated_Funds__c</fullName>
    <formula>Total_Budget__c - Total_Allocated_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Unallocated Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>