force-app/main/default/objects/Budget__c/fields/Total_Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated_Amount__c</fullName>
    <label>Total Allocated Amount</label>
    <summarizedField>Budget_Line_Item__c.Allocated_Amount__c</summarizedField>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>