force-app/main/default/objects/Budget__c/fields/Total_Unpaid_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Total_Unpaid_Disbursements__c</fullName>
    <label>Total Unpaid Disbursements</label>
    <summarizedField>Budget_Line_Item__c.Unpaid_Disbursements__c</summarizedField>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>